# 23Spring-Parallel-Computation-and-Design

./: CMakeLists.txt  readme_new.txt
include/: Input_0.h  Input_d.h  Input_p.h  Input_v.h  mathwork.h  mysca.h  scalapack_connector.h
input/: INPUT.txt
input/POINTS/: point10.txt  point50.txt
src/: Input_0.cpp  Input_d.cpp  Input_p.cpp  Input_v.cpp  main.cpp  mathwork.cpp  mysca.cpp
